--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -1,1 +1,17 @@
 @import '/node_modules/bootstrap/scss/bootstrap.scss';
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    overflow-x: hidden;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    background-color: rgb(254, 107, 107);
+    height: 200vh;
+
+}
