--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -15,3 +15,14 @@ body {
     height: 200vh;
 
 }
+
+main {
+    background: rgb(254, 107, 107);
+    background: linear-gradient(0deg, rgba(254, 107, 107, 1) 0%, rgba(131, 225, 202, 1) 89%);
+    width: 100vw;
+}
+
+.margin_top {
+    margin-top: 100px;
+    background-color: rgba(221, 221, 221, 0.47);
+}
