--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -11,14 +11,13 @@ body {
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
-    background-color: rgb(254, 107, 107);
     height: 200vh;
 
 }
 
 main {
     background: rgb(254, 107, 107);
-    background: linear-gradient(0deg, rgba(254, 107, 107, 1) 0%, rgba(131, 225, 202, 1) 89%);
+    background: linear-gradient(0deg, rgb(250, 250, 250) 0%, rgba(131, 225, 202, 1) 89%);
     width: 100vw;
 }
 
