--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -23,5 +23,16 @@ main {
 
 .margin_top {
     margin-top: 100px;
-    background-color: rgba(221, 221, 221, 0.47);
+}
+
+.z_index {
+    z-index: 0;
+}
+
+.text_dec_none {
+    text-decoration: none;
+}
+
+.background-green {
+    background-color: rgb(69, 169, 140);
 }
